--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "core-js": "^3.8.3",
+    "fontawesome": "^5.6.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
